src/objects/Employee__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>Today()- Date_of_Birth__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_CTC__c</fullName>
        <label>Annual CTC</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <picklist>
            <controllingField>State__c</controllingField>
            <picklistValues>
                <fullName>Hyderabad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guntur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhopal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Surat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gandhi Nagar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mumbai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pune</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <label>Date of Birth</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Joining__c</fullName>
        <label>Date of Joining</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Department</label>
        <referenceTo>Department__c</referenceTo>
        <relationshipLabel>Employees</relationshipLabel>
        <relationshipName>Departments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Education__c</fullName>
        <label>Education</label>
        <picklist>
            <picklistValues>
                <fullName>BE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B Tech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MCA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BCA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B Sc</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>First_name__c</fullName>
        <label>First Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <formula>First_name__c +&quot; &quot;+  Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_on_Notice_Period__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is on Notice Period</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Working_Day__c</fullName>
        <formula>Resignation_Date__c + 60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Working Day</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manager</label>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>Manager</relationshipLabel>
        <relationshipName>Manager</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resignation_Date__c</fullName>
        <label>Resignation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Salary_Credited_Till_Date__c</fullName>
        <label>Salary Credited Till Date</label>
        <summarizedField>Salary_Detail__c.Gross_Salary__c</summarizedField>
        <summaryForeignKey>Salary_Detail__c.Credited_To__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Skills__c</fullName>
        <label>Skills</label>
        <picklist>
            <picklistValues>
                <fullName>Apex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C#</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dot Net</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Force.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Java</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PHP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salesforce</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>AP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maharashtra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gujarat</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>IF( IsActive__c  = true, IF( Is_on_Notice_Period__c = true, &quot;Yellow&quot;, &quot;Green&quot;) , &quot;Red&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip</label>
        <length>6</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Employee</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Full_Name__c</columns>
        <columns>Address__c</columns>
        <columns>Date_of_Joining__c</columns>
        <columns>Department__c</columns>
        <columns>Education__c</columns>
        <columns>IsActive__c</columns>
        <columns>Is_on_Notice_Period__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Last_Working_Day__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Active_Employees</fullName>
        <columns>NAME</columns>
        <columns>First_name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Department__c</columns>
        <columns>Date_of_Joining__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IsActive__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Employees</label>
    </listViews>
    <listViews>
        <fullName>All_Employees_on_Notice_Period</fullName>
        <columns>First_name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Department__c</columns>
        <columns>Date_of_Joining__c</columns>
        <columns>Last_Working_Day__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_on_Notice_Period__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Employees on Notice Period</label>
    </listViews>
    <nameField>
        <displayFormat>EMP-{000000}</displayFormat>
        <label>Employee ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employees</pluralLabel>
    <recordTypes>
        <fullName>Non_Technical</fullName>
        <active>true</active>
        <label>Non-Technical</label>
    </recordTypes>
    <recordTypes>
        <fullName>Technical</fullName>
        <active>true</active>
        <label>Technical</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Last_work_date_is_greater_than_joining</fullName>
        <active>true</active>
        <errorConditionFormula>Last_Working_Day__c  &lt;  Date_of_Joining__c</errorConditionFormula>
        <errorMessage>Last working date should be greater than joining date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Resignation_Date_required_If_On_Notice</fullName>
        <active>true</active>
        <errorConditionFormula>Is_on_Notice_Period__c = true  &amp;&amp;   ISBLANK( Resignation_Date__c )</errorConditionFormula>
        <errorMessage>Resignation is required as employee is on notice period</errorMessage>
    </validationRules>
</CustomObject>